Move edd.gif down and left to avoid navbar overlap
- Move edd.gif from top: 0 to top: 120px
- Move edd.gif from left: 0 to left: -50px
- Lower z-index back to 3 (no longer needs to be above navbar)
- This positions edd.gif below the navbar area

--- a/styles/main.css
+++ b/styles/main.css
@@ -290,14 +290,14 @@ body {
         z-index: 1;
     }
 
-    /* Top left image (edd.gif) - larger, overlapping on top, above navbar */
+    /* Top left image (edd.gif) - larger, overlapping on top, moved down and left */
     &:nth-child(1) {
         position: absolute;
-        top: 0;
-        left: 0;
+        top: 120px;
+        left: -50px;
         width: 45%;
         max-width: 300px;
-        z-index: 25;
+        z-index: 3;
     }
 
     /* Bottom right image (cat.png) - smaller, overlapping on top */
